output/prod/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-app
  annotations:
    certmanager.k8s.io/acme-challenge-type: dns01
    certmanager.k8s.io/acme-dns01-provider: route53
    certmanager.k8s.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.allow-http: "false"
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: my-app.prod.fareonline.net
    http:
      paths:
      - path: "/"
        backend:
          serviceName: my-app
          servicePort: 80
  tls:
  - hosts:
    - my-app.prod.fareonline.net
    secretName: my-app-tls
